module12/http-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: cloudnative
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: httpsvc
        protocol: HTTP
      hosts:
        - '*'
